--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
+
+    <!-- App Wide -->
     <string name="app_name">Wallpapers</string>
-    <string name="licence_text">All the wallpapers shown in the app are either in public domain or under Creative Commons license for which proper attribution is given to the respective uploaders. No wallpaper is distributed with our app. If an image violates any copyright, please report it to us and we will remove it from our database. For more information, click here.</string>
-
-    <string name="title_activity_wall_preview">WallPreview</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-
 
     <!-- WallpaperStuff -->
     <string name="public_domain">Public Domain"</string>
@@ -26,4 +22,14 @@
     <string name="lock_screen_set">Lockscreen wallpaper set!</string>
     <string name="home_set">Homescreen wallpaper set!</string>
     <string name="both_set">Home and lockscreen wallpaper set!</string>
+    <string name="licence_text">All the wallpapers shown in the app are either in public domain or under Creative Commons license for which proper attribution is given to the respective uploaders. No wallpaper is distributed with our app. If an image violates any copyright, please report it to us and we will remove it from our database. For more information, click here.</string>
+
+    <!-- WallpaperPreview -->
+    <string name="title_activity_wall_preview">WallPreview</string>
+
+    <!-- DisclaimerActivity -->
+    <string name="disclaimer">Disclaimer</string>
+    <string name="takedown">Request takedown</string>
+    <string name="disc_text">All logos/images/names are copyrights of their respective owners. These images are not endorsed by any of the perspective owners and the images are used simply for aesthetic purposes. No copyright infringement is intended. Any request to remove one of the logos/images/names will be honoured. None of the images are hosted on the app. Each and every image is hotlinked from a source where hotlinking is allowed.</string>
+    <string name="takedown_text">If you are a photographer or a digital artist and you want your photo/art/image to be taken down, press the button below to email the developers regarding it. The link to the image in the app will be removed from the app soon.</string>
 </resources>
