--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- App Wide -->
     <string name="app_name">Wallpapers</string>
     <string name="email_id">regalstreak@gmail.com</string>
+    <string name="dev">Neil Agarwal</string>
 
     <!-- WallpaperStuff -->
     <string name="public_domain">Public Domain"</string>
@@ -24,6 +25,7 @@
     <string name="home_set">Homescreen wallpaper set!</string>
     <string name="both_set">Home and lockscreen wallpaper set!</string>
     <string name="licence_text">All the wallpapers shown in the app are either in public domain or under Creative Commons license for which proper attribution is given to the respective uploaders. No wallpaper is distributed with our app. If an image violates any copyright, please report it to us and we will remove it from our database. For more information, click here.</string>
+    <string name="share_text">Hey I just found a great wallpaper for you from the</string>
 
     <!-- WallpaperPreview -->
     <string name="title_activity_wall_preview">WallPreview</string>
